feat: Add DTO mapping layer, expose converter, update demos/docs, and add conversion test

--- a/demo/with-api.html
+++ b/demo/with-api.html
@@ -19,9 +19,17 @@
     <div id="example" class="brackets-viewer"></div>
 
     <script type="module">
-        const data = await fetch('http://localhost:3000/db')
-            .catch(() => alert('Failed to fetch localhost. Please do `npm run db` or use json-server your own way.'))
-            .then(res => res.json());
+        const response = await fetch('./api-data.json')
+            .catch(() => alert('Failed to load api-data.json.'))
+            .then(res => res?.json());
+
+        if (!response) {
+            throw new Error('Unable to load API data sample.');
+        }
+
+        const viewerData = window.bracketsViewerDTO.convertStageStructureToViewerData(response.structure, response.standings, {
+            stageName: 'Playoffs',
+        });
 
         // You can manually add locales. English will be used as a fallback if keys are missing.
         // You can force browser language detection with: `window.localStorage['i18nextLng'] = 'ru'` and reloading the page.
@@ -32,17 +40,12 @@
         });
 
         // This is optional. You must do it before render().
-        window.bracketsViewer.setParticipantImages(data.participant.map(participant => ({
+        window.bracketsViewer.setParticipantImages(viewerData.participants.map(participant => ({
             participantId: participant.id,
             imageUrl: 'https://github.githubassets.com/pinned-octocat.svg',
         })));
 
-        await window.bracketsViewer.render({
-            stages: data.stage,
-            matches: data.match,
-            matchGames: data.match_game,
-            participants: data.participant,
-        }, {
+        await window.bracketsViewer.render(viewerData, {
             customRoundName: (info, t) => {
                 // You have a reference to `t` in order to translate things.
                 // Returning `undefined` will fallback to the default round name in the current language.
