Update demo files and remove unused resources
- Added demo data files to .gitignore to prevent accidental inclusion in version control.
- Deleted unused files: `prompt.md`, `SWISS_LAYER_STACKING.md`, `swissData-layered.json`, and `swissData-with-standings.json` to clean up the repository.
- Updated demo HTML files to reference the new `swissData.json` for consistency in data fetching.
- Enhanced demo UI by adding Roboto font for improved typography.

These changes streamline the demo environment and ensure that only relevant files are included in the project.

--- a/demo/check-layout.html
+++ b/demo/check-layout.html
@@ -26,8 +26,8 @@
     }
     
     async function test() {
-      addLog('Loading swissData-layered.json...');
-      const response = await fetch('swissData-layered.json');
+      addLog('Loading swissData.json...');
+      const response = await fetch('swissData.json');
       const structure = await response.json();
       
       const viewerData = window.bracketsViewerDTO.convertStageStructureToViewerData(structure, structure, {
